<resources>
    <string name="app_name">Tiffin Waiter</string>

    <!--EXTRA-->
    <string name="digit_alpha">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digit_number">0123456789</string>
    <string name="digit_alpha_number">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789</string>
    <string name="digit_alpha_number_hash">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789 #</string>
    <string name="check_network">No Internet Connection!</string>
    <string name="try_again">Something went wrong Please try again later.</string>
    <string name="ok">OK</string>
    <string name="no_data">Data not available</string>
    <string name="wait">Please wait...</string>
    <string name="na">NA</string>
    <string name="permission">It seems that some permission for Tiffin Waiter has not granted. Please give all the required permission to enjoy Tiffin Waiter features.</string>
    <string name="txt_write_external_storage">Write External Storage</string>
    <string name="txt_camera">Camera</string>
    <string name="txt_grant_access">You need to grant access to</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_dismiss">Dismiss</string>
    <string name="txt_notifications">Notifications</string>
    <string name="session_expire">Session Expire</string>
    <string name="session_expire_msg">Your login session is expire, Please login again.</string>
    <string name="block_admin">Block by Admin</string>
    <string name="block_admin_msg">Sorry! your account blocked by admin.</string>
    <string name="update">Update</string>
    <string name="later">Later</string>

    <!--LOGIN SCREEN-->
    <string name="txt_signin">Sign in</string>
    <string name="txt_login">Log in</string>
    <string name="txt_waiter_id">Waiter ID</string>
    <string name="txt_password">Password</string>
    <string name="waiterid_length">Waiter ID is too short.</string>
    <string name="password_length">Password is too short.</string>
    <string name="txt_forgot_password">I forgot my password</string>

    <!--HOME SCREEN-->
    <string name="txt_status">Status</string>
    <string name="txt_order_status">Order Status</string>
    <string name="txt_menu">Menu</string>
    <string name="txt_profile">Profile</string>
    <string name="back_msg">Please click BACK again to exit.</string>

    <!--PROFILE SCREEN-->
    <string name="txt_logout">Logout</string>
    <string name="logout_msg">Are you sure want to logout?</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="terms_con_settings">Terms &amp; Conditions</string>
    <string name="text_waiterid">Waiter Id-</string>

    <!--MENU SCREEN-->
    <string name="text_outofstock">Out of Stock</string>
    <string name="rupess_sign">₹</string>

    <!--ORDER STATUS SCREEN-->
    <string name="txt_new">New</string>
    <string name="txt_processing">Processing</string>
    <string name="txt_served">Served</string>
    <string name="txt_no_neworder">No new orders yet</string>
    <string name="txt_no_processingorder">No processing orders yet</string>
    <string name="txt_no_servedorder">No served orders yet</string>
    <string name="txt_refresh">Refresh</string>
    <string name="txt_cross_sign">x</string>
    <string name="txt_order_detail">Order Detail</string>
    <string name="txt_items_total">Items Total</string>
    <string name="txt_item_total">Item Total</string>
    <string name="txt_tax">Tax</string>
    <string name="txt_total">Total</string>
    <string name="txt_total_amount">Total Amount</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_reject">Reject</string>
    <string name="txt_rejected">Rejected</string>
    <string name="accept_msg">Are you sure want to accept this order?</string>
    <string name="reject_msg">Are you sure want to reject this order?</string>
    <string name="txt_order_no">Order No.</string>
    <string name="txt_dinein">Dine in</string>
    <string name="txt_take_away">Take Away</string>
    <string name="txt_table_no">Table No.</string>
    <string name="txt_t">T</string>
    <string name="txt_ready">Ready</string>
    <string name="txt_kitchen">Kitchen</string>

    <!--ORDER Details SCREEN-->
    <string name="txt_eta">ETA:</string>
    <string name="txt_preparing">Preparing</string>
    <string name="txt_ready_serve">Ready to Serve</string>
    <string name="txt_delivered">Delivered</string>
    <string name="txt_alert">Alert</string>
    <string name="txt_order_already_accepted">This order already accepted.</string>
    <string name="txt_order_already_rejected">This order already rejected.</string>

    <!--SEARCH SCREEN-->
    <string name="txt_search">Search</string>
    <string name="txt_search_nodata">No searching result</string>


    <string name="txt_all_done">All Done</string>
    <string name="hint_order_search">Search order number eg 500051</string>
    <string name="txt_id">ID</string>
    <string name="username_empty_error">Kitchen Id cannot be empty</string>
    <string name="password_empty_error">Password cannot be empty</string>
    <string name="password_length_error">Password should be of atleast 5 characters</string>
    <string name="something_went_wrong">Something Went Wrong! Please Try Again!</string>
    <string name="bad_credentials">Wrong Credentials</string>
    <string name="login_success">Login Successful</string>
    <string name="unable_to_set_eta">Unable to Set ETA</string>
    <string name="txt_complete_item_error">Unable to finish this item. Please try again!</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="title_order_history">Order History</string>
    <string name="title_order_details">Detail - %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_menu">Menu</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="txt_see_detail">See Detail</string>
    <string name="txt_accepting_order">Accepting Order</string>
    <string name="txt_title_order_served">Order Served?</string>
    <string name="txt_message_order_served">Has order been Served?</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="channel_description">Tffin Waiter Notifications</string>
    <string name="channel_name">Tiffin Waiter</string>
    <string name="txt_title_profile">User Profile</string>
    <string name="channel_group_name">Waitty Waiter Notifications</string>

</resources>
