<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="false"
        app:cardCornerRadius="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_logout"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16ssp"
                android:gravity="center"
                android:singleLine="true"
                android:background="@color/colorTabItemTextSelected"
                android:padding="@dimen/_10sdp"
                android:fontFamily="@font/bwnistageo_medium"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtMSG"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/logout_msg"
                        android:textColor="@color/colorNextWelcome"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/bwnistageo_light"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:layout_marginBottom="@dimen/_10sdp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnCancel"
                            style="@style/textButton"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:textColor="@color/colorAlmostDone"
                            android:textSize="@dimen/_14ssp"
                            android:text="@string/txt_cancel"
                            android:fontFamily="@font/bwnistageo_regular"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnLogout"
                            style="@style/textButton"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"
                            android:textColor="@color/colorAlmostDone"
                            android:textSize="@dimen/_14ssp"
                            android:text="@string/txt_logout"
                            android:fontFamily="@font/bwnistageo_regular"/>

                    </RelativeLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>

