<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<data>
    <variable
        name="LoginVM"
        type="com.waitty.waiter.viewmodel.LoginViewModel" />
    <variable
        name="clickEvent"
        type="com.waitty.waiter.utility.WKClickListener" />

    <import type="com.waitty.waiter.viewmodel.ClickType" />
</data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/viewLogin"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputWaiterIdLayout"
                android:layout_width="290dp"
                android:layout_height="56dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="1dp"
                style="@style/Widget.AppTheme.TextInputLayout"
                android:hint="@string/txt_id"
                app:boxStrokeColor="@color/colorWaiterIdText"
                app:boxStrokeWidth="@dimen/_1dp"
                android:textColorHint="@color/colorTabItemTextSelected"
                app:hintTextColor="@color/colorTabItemTextSelected"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etWaiterId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_14sp"
                    android:text="@={LoginVM.waiterId}"
                    android:textColor="@color/colorTabItemTextSelected"
                    android:fontFamily="@font/bwnistageo_medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputPasswordLayout"
                android:layout_width="290dp"
                android:layout_height="56dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="1dp"
                android:hint="@string/txt_password"
                style="@style/Widget.AppTheme.TextInputLayout"
                android:textColorHint="@color/colorTabItemTextSelected"
                app:boxStrokeColor="@color/colorWaiterIdText"
                app:boxStrokeWidth="@dimen/_1dp"
                app:hintTextColor="@color/colorTabItemTextSelected"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInputWaiterIdLayout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/bwnistageo_medium"
                    android:inputType="textPassword"
                    android:text="@={LoginVM.password}"
                    android:textColor="@color/colorTabItemTextSelected"
                    android:textSize="@dimen/_14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvIdError"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="Email not valid"
                style="@style/ErrorTextTheme"
                android:text='@{LoginVM.userIdError.intValue() > 0 ? context.getString(LoginVM.userIdError.intValue()) : ""}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInputWaiterIdLayout" />

            <TextView
                android:id="@+id/tvErrorPassword"
                style="@style/ErrorTextTheme"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="60dp"
                android:text='@{LoginVM.passwordError.intValue() > 0 ? context.getString(LoginVM.passwordError.intValue()) : ""}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInputPasswordLayout"
                tools:text="TextView" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                style="@style/BtnLogin"
                android:drawableEnd="@drawable/ic_action_name"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/txt_signin"
                app:backgroundTint="@color/colorTxtLink"
                app:cornerRadius="@dimen/_25dp"
                app:elevation="0dp"
                android:gravity="center_horizontal|center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvErrorPassword" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="320dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="320dp"
                android:fontFamily="@font/bwnistageo_bold"
                android:text="@string/txt_forgot_password"
                android:textColor="@color/colorTxtLink"
                android:textSize="@dimen/_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/layout_custom_loading"
            android:id="@+id/layoutLoader"
            tools:visibility="gone"/>

        <include layout="@layout/layout_connection_error"
            tools:visibility="gone"
            android:id="@+id/layoutError"/>
    </FrameLayout>


</layout>